# RailGo-Parser

./: .gitignore  README.md  devtest.py  main.py  manifest.json  pyproject.toml  requirements.txt
railgo/: config.py
railgo/api/: main.py
railgo/parser/: entry.py  pipe.py
railgo/parser/db/: base.py  json.py  mongo_json.py  mongo_sqlite.py  sqlite.py
railgo/parser/models/: station.py  train.py
railgo/parser/parse/: map.py  station.py  train.py
railgo/parser/utils/: appclient.py  client_app.py  client_web.py  datafixer.py  station_subset.py
railgo/watchboard/: main.py
